Examples/LexTerm.out
__   __ __  __  ____   ___      _________________________________________
||   || ||  || ||  || ||__      Hugs 98: Based on the Haskell 98 standard
||___|| ||__|| ||__||  __||     Copyright (c) 1994-2005
||---||         ___||           World Wide Web: http://haskell.org/hugs
||   ||                         Report bugs to: hugs-bugs@haskell.org
||   || Version: March 2005     _________________________________________

Hugs mode: Restart with command line option +98 for Haskell 98 mode

Type :? for help
LexTerm> 
LexTerm> 
Program error: user error (line 3: syntax error
expected: `+' or `-', <end of input>
found   : )+4<end of input>)

LexTerm> [Leaving Hugs]
